Add converters around serialization issues from Api Client requests